--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ p{
 
 .complete-order-btn{
     color: white;
-    width: 100%;
+    /* width: 90%; */
     padding: 18px 175px 18px 194px;
     align-items: center;
     background: #16DB99;
@@ -155,8 +155,8 @@ button{
     right: 0;
     left: 0;
     margin: auto;
-    height: 542px;
-    width: 524px;
+    height: 80%;
+    width: 50%;
     border-radius: 4px;
     box-shadow: 0px 0px 60px 10px #666;
     background-color: #FFFFFF;
@@ -183,7 +183,6 @@ input{
     border: 1px solid #757575;
     padding: 15px 25px;
     border-radius: 5px;
-    width: 476px;
     height: 71px;
     box-sizing: border-box;
 }
